infrastructure/networking/cilium/hubble-basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-ui-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: hubble-ui-auth
